--- a/build.yaml
+++ b/build.yaml
@@ -19,9 +19,9 @@
 ---
 include:
  - board: seeeduino_xiao_ble
-   shield:"SeaSide39_R;rgbled_adapter"
+   shield: SeaSide39_R;rgbled_adapter
    snippet: studio-rpc-usb-uart
  - board: seeeduino_xiao_ble
-   shield:"SeaSide39_L;rgbled_adapter"
+   shield: SeaSide39_L;rgbled_adapter
  - board: seeeduino_xiao_ble
    shield: settings_reset
