--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,8 @@
 #
 ---
 include:
- - board: seeeduino_xiao_ble
+# - board: seeeduino_xiao_ble
+ - board: xiao_ble
    shield: SeaSide39_R rgbled_adapter
    snippet: studio-rpc-usb-uart
  - board: seeeduino_xiao_ble
