--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,9 @@ include:
  - board: xiao_ble
    shield: SeaSide39_R rgbled_adapter
    snippet: studio-rpc-usb-uart
- - board: seeeduino_xiao_ble
+# - board: seeeduino_xiao_ble
+ - board: xiao_ble
    shield: SeaSide39_L rgbled_adapter
- - board: seeeduino_xiao_ble
+# - board: seeeduino_xiao_ble
+ - board: xiao_ble
    shield: settings_reset
